gitops/components/keycloak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    argocd.argoproj.io/sync-wave: "3"
  name: keycloak
spec:
  rules:
  - host: keycloak.starter.kubefirst.com
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: http
        path: /
  tls:
  - hosts:
    - keycloak.starter.kubefirst.com
    secretName: keycloak-tls
